2004-05-18  Mike Kestner  <mkestner@ximian.com>

	* glib/MissingIntPtrCtorException.cs : new exception to throw if 
	unable to access an IntPtr ctor on a GLib.Object subclass.  We need
	an IntPtr ctor to be able to wrap arbitrary object handles.
	* glib/Object.cs : have NativeType call LookupGType.
	* glib/ObjectManager.cs : throw the new exception in a try/catch.

2004-05-17  Mike Kestner  <mkestner@ximian.com>

	* generator/ObjectGen.cs : Generate a .cctor that calls the assembly's
	ObjectManager.Initialize method if the class will need to be registered
	with GLib.ObjectManager.  Enhance the Initialize method to allow 
	multiple invocations.

2004-05-17  Mike Kestner  <mkestner@ximian.com>

	* generator/SignalHandler.cs : fix some broken/redundant generation in
	the Object/Struct wrapping for sig params.
	* glib/Object.cs : internalize/protect lots of API that shouldn't need
	to be used by non-subclass/non-glib code. Return GType.Object as GType.
	* glib/Value.cs : use internal GLib.Object.NativeType prop.
	* sample/TestDnd.cs : use ToString instead of TypeName.

2004-05-14  Todd Berman  <tberman@sevenl.net>

	* glib/Object.cs: make static GLib.Object.LookupGType protected for now.
	* gtk/CellRenderer.custom: code to allow for subclassing and
	implementing a custom cell renderer.
	* gtk/Makefile.am: add custom to build.
	* gtk/glue/Makefile.am: add glue to build.
	* gtk/glue/cellrenderer.c: glue code to override get_size and render
	from cellrenderer.
	* sample/CustomCellRenderer.cs: new sample to show how to implement a
	custom cell renderer.
	* sample/Makefile.am: add CustomCellRenderer sample.

2004-05-13  Todd Berman  <tberman@sevenl.net>

	* *.pc.in: add .dll to the end of the Libs: references, and convert
	them to be absolute paths.

2004-05-11  Mike Kestner  <mkestner@ximian.com>

	* *.pc.in : add Requires so that dependent libs are pulled in too.

2004-05-11  Mike Kestner  <mkestner@ximian.com>
